--- a/NicerAppWebOS/logic.vividUserInterface/v6.y.z/2D/button-4.2.0/themes.css
+++ b/NicerAppWebOS/logic.vividUserInterface/v6.y.z/2D/button-4.2.0/themes.css
@@ -27,6 +27,7 @@
     height : var(--vb-icon-widthHeight);
     min-height : var(--vb-icon-widthHeight);
     max-height : var(--vb-icon-widthHeight);
+    position:relative;
 }
 
 .vividButton_currentState {
@@ -43,7 +44,8 @@
     height : var(--vb-icon-widthHeight);
     min-height : var(--vb-icon-widthHeight);
     max-height : var(--vb-icon-widthHeight);
-}    
+    position:relative;
+}
 
 .vividButton_toState {
     z-index : 2230;
@@ -60,7 +62,8 @@
     min-height : var(--vb-icon-widthHeight);
     max-height : var(--vb-icon-widthHeight);
     opacity : 0;
-}    
+    position:relative;
+}
 
 
 .icon_background {
@@ -76,6 +79,7 @@
     background : rgba(0,0,0,0.7);
     border-radius : 10px;
     transform : translateY(20px);
+    position:relative;
 }
 
 .circleIcon_background {
@@ -90,9 +94,10 @@
     height : var(--vb-iconImg-widthHeight);
     min-height : var(--vb-iconImg-widthHeight);
     max-height : var(--vb-iconImg-widthHeight);
-    transform : translateY(20px);
+    /*transform : translateY(20px);*/
     border-radius : 100px;
     z-index : 4150;
+    position:absolute;
 }
 
 .circleIcon_img {
@@ -106,9 +111,10 @@
     height : var(--vb-iconImg-widthHeight);
     min-height : var(--vb-iconImg-widthHeight);
     max-height : var(--vb-iconImg-widthHeight);
-    transform : translateY(-20px);
+    /*transform : translateY(-20px);*/
     z-index : 4190;
-} 
+    position:absolute;
+}
 
 .circleIcon_svg {
     display : inline-flex;
@@ -121,11 +127,9 @@
     height : var(--vb-iconImg-widthHeight);
     min-height : var(--vb-iconImg-widthHeight);
     max-height : var(--vb-iconImg-widthHeight);
-    transform : translateY(-26px);
+    /*transform : translateY(-26px);*/
     z-index : 4180;
-}
-.circleIcon_svg {
-    z-index : 4180;
+    position:absolute;
 }
 
 .vividButton_currentState .circleIcon__svg {
